--- a/Zeldish/Zeldish/Zeldish.vcxproj.filters
+++ b/Zeldish/Zeldish/Zeldish.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="test.lua">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
