--- a/Zeldish/Zeldish/Zeldish.vcxproj
+++ b/Zeldish/Zeldish/Zeldish.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="System.cpp" />
+    <ClCompile Include="WindowLib.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Menu.h" />
