--- a/Zeldish/Zeldish/Zeldish.vcxproj
+++ b/Zeldish/Zeldish/Zeldish.vcxproj
@@ -166,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="MenuLib.h" />
     <ClInclude Include="System.h" />
     <ClInclude Include="WindowLib.h" />
   </ItemGroup>
