--- a/Zeldish/Zeldish/Zeldish.vcxproj
+++ b/Zeldish/Zeldish/Zeldish.vcxproj
@@ -162,12 +162,14 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="System.cpp" />
+    <ClCompile Include="TileMap.cpp" />
     <ClCompile Include="WindowLib.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuLib.h" />
     <ClInclude Include="System.h" />
+    <ClInclude Include="TileMap.h" />
     <ClInclude Include="WindowLib.h" />
   </ItemGroup>
   <ItemGroup>
