--- a/Zeldish/Zeldish/Zeldish.vcxproj
+++ b/Zeldish/Zeldish/Zeldish.vcxproj
@@ -159,12 +159,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="InputChecker.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="System.cpp" />
     <ClCompile Include="WindowLib.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="InputChecker.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuLib.h" />
     <ClInclude Include="System.h" />
