--- a/Zeldish/Zeldish/Zeldish.vcxproj
+++ b/Zeldish/Zeldish/Zeldish.vcxproj
@@ -160,6 +160,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BoundingVolume.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="InputChecker.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Menu.cpp" />
@@ -169,6 +170,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BoundingVolume.h" />
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="InputChecker.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuLib.h" />
