--- a/Zeldish/Zeldish/Zeldish.vcxproj
+++ b/Zeldish/Zeldish/Zeldish.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="InputChecker.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="System.cpp" />
     <ClCompile Include="TileMap.cpp" />
     <ClCompile Include="WindowLib.cpp" />
@@ -174,6 +175,7 @@
     <ClInclude Include="InputChecker.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuLib.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="System.h" />
     <ClInclude Include="TileMap.h" />
     <ClInclude Include="WindowLib.h" />
