--- a/Zeldish/Zeldish/Zeldish.vcxproj
+++ b/Zeldish/Zeldish/Zeldish.vcxproj
@@ -178,6 +178,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="LuaUpdate.lua" />
+    <None Include="Region.lua" />
     <None Include="test.lua" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
