--- a/Zeldish/Zeldish/Zeldish.vcxproj.filters
+++ b/Zeldish/Zeldish/Zeldish.vcxproj.filters
@@ -73,5 +73,8 @@
     <None Include="LuaUpdate.lua">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="Region.lua">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
