+ Library for entity / sprite constants

--- a/Zeldish/Zeldish/Zeldish.vcxproj
+++ b/Zeldish/Zeldish/Zeldish.vcxproj
@@ -171,6 +171,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BoundingVolume.h" />
+    <ClInclude Include="EntityLib.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="InputChecker.h" />
     <ClInclude Include="Menu.h" />
