--- a/Zeldish/Zeldish/Zeldish.vcxproj.filters
+++ b/Zeldish/Zeldish/Zeldish.vcxproj.filters
@@ -100,5 +100,8 @@
     <None Include="LevelEditor.lua">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="AI.lua">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
